ajuste para devolver  a OCP